<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">GurpsC</string>
    <string name="title_activity_char_sheet">Character Sheet</string>
    <!--Table names~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
    <string name="action_settings">Settings</string>
    <string name="id_title">Identity</string>
    <string name="desc_title">Description</string>
    <string name="att_title">Attributes</string>
    <string name="hpfp_title">Health/Fatigue</string>
    <string name="melee_title">Melee Weapons</string>
    <string name="ranged_title">Ranged Weapons</string>
    <string name="advantages">Advantages</string>
    <string name="disadvantages">Disadvantages</string>
    <string name="enc_title">Encumbrance &amp; Dodge</string>
    <string name="skills_title">Skills</string>
    <!--Column Names~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
    <!--Skills-->
    <string name="skill_name">Name</string>
    <string name="skill_spec">Spec.</string>
    <string name="skill_diff">Diff.</string>
    <string name="skill_attr">Attr.</string>
    <string name="skill_rank">Rank</string>
    <!--Encumbrance-->
    <string name="lvl_title">Encumbrance</string>
    <string name="load_title">Max Load</string>
    <string name="move_title">Move</string>
    <string name="dodge_title">Dodge</string>
    <string name="lift_title">Lift &amp; Move</string>
    <string name="sense_title">Senses</string>
    <string name="status_title">Status</string>
    <!--Encumbrance fields-->
    <string name="none">None(0)</string>
    <string name="light">Light(1)</string>
    <string name="medium">Medium(2)</string>
    <string name="heavy">Heavy(3)</string>
    <string name="x_heavy">X-Heavy(4)</string>
    <string name="basic_lift">Basic Lift:</string>
    <string name="one_handed">One-Handed Lift:</string>
    <string name="two_handed">Two-Handed Lift:</string>
    <string name="shove_knock">Shock &amp; Knock Over:</string>
    <string name="running_shove">Running Shove &amp; Knock Over:</string>
    <string name="carry">Carry on Back:</string>
    <string name="shift">Shift Slightly:</string>
    <string name="hit_loc">Hit Location</string>

    <!--buttons~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
    <string name="but_save">Save Character</string>
    <string name="but_load">Load Character</string>
    <string name="but_new">New Character</string>
    <string name="but_back">Back</string>
    <string name="but_delete">Delete</string>
    <string name="but_del">X</string>
    <string name="but_newskill">New Skill</string>
    <string name="but_newmelee">New Melee</string>
    <string name="but_newranged">New Ranged</string>
    <string name="but_add_w">Add Weapon</string>
    <string name="but_add_a">Add Advantage</string>
    <string name="but_add">Add Skill</string>

    <!--page titles~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_cs">CSActivity</string>
    <string name="title_activity_load">Load Character</string>
    <string name="title_activity_add_skill">AddSkillActivity</string>

    <!--Add Skill fields~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
    <string name="add_name">Skill Name:</string>
    <string name="add_spec">Specialization:</string>
    <string name="add_diff">Difficulty:</string>
    <string name="add_attr">Attribute:</string>

    <string-array name="diff_menu">
        <item android:tag="Ea">Easy</item>
        <item android:tag="Av">Average</item>
        <item android:tag="Hd">Hard</item>
        <item android:tag="Vh">Very Hard</item>
    </string-array>

    <string-array name="attr_menu">
        <item android:tag="Str">Str</item>
        <item android:tag="Dex">Dex</item>
        <item android:tag="IQ">IQ</item>
        <item android:tag="Health">Health</item>
    </string-array>

    <!--Weapon~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
    <string name="w_class">Weapon Class:</string>
    <string name="w_name">Weapon Name:</string>
    <string name="w_tl">TL:</string>
    <string name="w_dmg">Damage:</string>
    <string name="w_weight">Weight:</string>
    <string name="w_cost">Cost:</string>
    <string name="w_st">St:</string>
    <!--Melee-->
    <string name="w_reach">Reach:</string>
    <string name="w_parry">Parry:</string>
    <!--Ranged-->
    <string name="w_acc">Accuracy:</string>
    <string name="title_acc">Acc:</string>
    <string name="w_range">Range:</string>
    <string name="w_rof">RoF:</string>
    <string name="w_shots">Shots:</string>
    <string name="w_blk">Bulk:</string>
    <string name="w_rcl">Rcl:</string>
    <string name="w_lc">LC:</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!--Advantages-->
    <string name="add_ad">Add Advantage/Disadvantage</string>
    <string name="a_name">Name:</string>
    <string name="a_desc">Description:</string>
    <string name="a_cost">Cost:</string>
    <string name="a_has_level">Has Levels:</string>
    <string name="a_lvls">Lvls:</string>
    <string name="a_cost_level">Cost/Lvl:</string>
    
    <!--roll descriptions-->
    <string name="str_roll">Str Roll</string>
    <string name="dex_roll">Dex Roll</string>
    <string name="ht_roll">Health Roll</string>
    <string name="iq_roll">IQ Roll</string>
    <string name="will_roll">Will Roll</string>
    <string name="per_roll">Per Roll</string>
    <string name="custom_roll">Custom Roll</string>
    <string name="target">Target: </string>

</resources>
