<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="65dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="soulstudios.gurpsc.AddSkillActivity"
    tools:showIn="@layout/activity_add_adv">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/add_ad"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:labelFor="@+id/aname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/a_name"/>

        <EditText
            android:id="@+id/aname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="text"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:labelFor="@+id/adesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:text="@string/a_desc"/>

        <EditText
            android:id="@+id/adesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:background="@drawable/outer_border"
            android:inputType="textMultiLine"
            android:lines="2"
            android:paddingStart="5dp"
            android:textSize="12sp"
            android:maxLines="10"
            android:gravity="top|start"
            android:ems="15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:tag="LL">
        <TextView
            android:labelFor="@+id/ahaslvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_has_level"/>

        <CheckBox
            android:id="@+id/ahaslvl"
            android:tag="CheckLvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:labelFor="@+id/alvls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/a_lvls"/>

        <EditText
            android:id="@+id/alvls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="number"
            android:ems="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:labelFor="@+id/acost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/a_cost"/>

        <EditText
            android:id="@+id/acost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="2" />

        <TextView
            android:labelFor="@+id/acostlvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/a_cost_level"/>

        <EditText
            android:id="@+id/acostllvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="numberSigned"
            android:ems="2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/but_add_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_add_a" />
        <Button
            android:id="@+id/add_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_back" />
    </LinearLayout>
</LinearLayout>
