<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="soulstudios.gurpsc.PageFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:columnCount="1">

        <TextView
            android:id="@+id/Options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="Options" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/outer_border">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >


                <Button
                    android:id="@+id/button_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:text="@string/but_new" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button_load"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:text="@string/but_load" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >


                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:text="@string/but_save" />
            </TableRow>
        </TableLayout>


    </GridLayout>

</RelativeLayout>
